<resources>
    <string name="app_name">Contact Address Book</string>
    <!-- title strings -->
    <string name="title_home">Home</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_new_contact">New Contact</string>
    <string name="title_phone">Phone</string>
    <string name="title_edit_contact">Edit contact</string>
    <string name="title_go_back">Go back</string>

    <!-- hint strings -->
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_email">Email</string>
    <string name="hint_dob">Date of birth</string>
    <string name="hint_street_line_1">Street Line 1</string>
    <string name="hint_street_line_2">Street line 2</string>
    <string name="hint_city">Town/City</string>
    <string name="hint_postcode">Postcode</string>

    <!-- text strings -->
    <string name="text_add_photo">Add Photo</string>
    <string name="text_remove_photo">Remove Photo</string>
    <string name="text_loading">Loading</string>

    <!-- button strings -->
    <string name="button_submit">Submit</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>

    <!-- toast message string -->
    <string name="toast_contact_deleted">Contact deleted</string>
    <string name="toast_contact_updated">Contact updated</string>
</resources>