<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_contacts">

    <fragment
        android:id="@+id/navigation_phone"
        android:name="com.example.contactaddressbook.ui.phone.PhoneFragment"
        android:label="@string/title_phone"
        tools:layout="@layout/fragment_phone" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.contactaddressbook.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/navigation_new_contact"
        android:name="com.example.contactaddressbook.ui.newcontact.NewContactFragment"
        android:label="@string/title_new_contact"
        tools:layout="@layout/new_contact_fragment" >
        <action
            android:id="@+id/action_navigation_new_contact_to_navigation_contacts"
            app:destination="@id/navigation_contacts" />
    </fragment>
</navigation>