<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.newcontact.NewContactFragment">

    <data>
        <variable
            name="newContactViewModel"
            type="com.example.contactaddressbook.ui.newcontact.NewContactViewModel"  />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/ic_baseline_account_circle_24"
                    android:id="@+id/image_view_profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_add_photo"
                    android:text="@string/text_add_photo"
                    android:textColor="@color/blue_300"
                    app:layout_constraintTop_toBottomOf="@id/image_view_profile"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_first_name"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_first_name"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    app:layout_constraintTop_toBottomOf="@id/text_add_photo"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_last_name"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_last_name"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    app:layout_constraintTop_toBottomOf="@id/edit_text_first_name"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_telephone"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone"
                    app:layout_constraintTop_toBottomOf="@id/edit_text_last_name"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_email"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintTop_toBottomOf="@id/edit_text_telephone"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_dob"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_dob"
                    android:maxLines="1"
                    android:drawableStart="@drawable/ic_calendar_item"
                    android:drawablePadding="3dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    app:layout_constraintTop_toBottomOf="@id/edit_text_email"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_street_one"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_street_line_1"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    app:layout_constraintTop_toBottomOf="@id/edit_text_dob"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_street_two"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_street_line_2"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    app:layout_constraintTop_toBottomOf="@id/edit_text_street_one"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_city"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_city"
                    android:inputType="text"
                    android:maxLines="1"
                    app:layout_constraintTop_toBottomOf="@id/edit_text_street_two"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_postcode"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_postcode"
                    android:inputType="textPostalAddress"
                    android:maxLines="1"
                    app:layout_constraintTop_toBottomOf="@id/edit_text_city"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_submit"
                    android:layout_marginTop="10dp"
                    android:text="@string/button_submit"
                    app:layout_constraintTop_toBottomOf="@id/edit_text_postcode"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>